# rpz_planning

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
config/: eval.rviz  explorer_x1.rviz  gbplanner.rviz  gbplanner_trajopt.rviz  ground_truth.rviz  map_accum.rviz  marv.rviz  occlusion.rviz  rewarder.rviz  rqt_multiplot_map_eval.xml  smb.rviz  subt.rviz  traversability.rviz
config/explorer_x1/: gbplanner_config.yaml  planner_control_interface_sim_config.yaml
config/smb/: gbplanner_config.yaml  planner_control_interface_sim_config.yaml  voxblox_sim_config.yaml
data/results/: results_parser.ipynb  simple_cave_02.xls  simple_cave_02_trajopt.xls
docs/: darpa_subt.md  demo.md  eval.md  install.md  singularity.md
launch/: actual_expected_coster_rewarder.launch  actual_reward.launch  bag.rviz  detector.launch  detector_x1.launch  eval.launch  gazebo_gbplanner.launch  gbplanner.launch  gbplanner_subt.launch  gbplanner_trajopt.launch  ground_truth_world_pub.launch  local_coster_rewarder.launch  map_accumulator.launch  map_eval.launch  marv.rviz  mavr.rviz  meshes_gt_pub.launch  naex.launch  naex_opt.launch  play.launch  play_bag.launch  play_marv.launch  play_tradr.launch  points_occlusions.launch  prepare_data_s2d.launch  record.launch  rewarder.launch  rewards_accumulator.launch  rpz_planner.launch  rpz_predictor.launch  save_poses.launch  slam_gbplanner.launch  smb_sim.launch  subt_gbplanner.launch  tradr.rviz  travelled_dist.launch
msg/: Metrics.msg
notebooks/: compare_gt_map_mesh_to_point_cloud.ipynb  dist_mask_params_estimation.ipynb  local_rewards_costs.ipynb  local_rewards_costs.xls  merge_meshes_from_world.ipynb  metrics_xls_parser-caves-gbplanner.ipynb  metrics_xls_parser-caves.ipynb  metrics_xls_parser-finals_qual-gbplanner.ipynb  metrics_xls_parser-finals_qual-sensor-models-dist-only.ipynb  metrics_xls_parser-finals_qual.ipynb  metrics_xls_parser-gbplanner-slow_naex.ipynb  metrics_xls_parser-gbplanner_naex.ipynb  metrics_xls_parser-gbplanner_naex_trajopt.ipynb  metrics_xls_parser-sensor-models-dist-only.ipynb  metrics_xls_parser-simple_caves.ipynb  metrics_xls_parser-traversability-caves.ipynb  metrics_xls_parser-traversability.ipynb  metrics_xls_parser.ipynb
params/: gbplanner.yaml  naex_trajopt.yaml
python/: planning_on_rpz_subspace_v0.py  planning_on_rpz_subspace_v1.py
rviz/: explorer_x1.rviz  map_accum.rviz  marv.rviz  occlusion.rviz  x1.rviz
scripts/: points_occlusion.py  rpz_planner
scripts/utils/: actual_expected_coster_rewarder.py  eval.py  ground_truth_world_pub.py  meshes_gt_pub.py  (+3 more)
singularity/: build_images  gbplanner2.apt  gbplanner2.repos  rpz_eval.txt  rpz_gbplanner.txt  rpz_planning.repos  rpz_planning.txt  rpz_planning_all.txt  upload_images
src/: actual_reward  points_occlusion  rpz_planner
tools/: actual_expected_coster_rewarder.py  actual_reward.py  eval.py  ground_truth_world_pub.py  local_coster_rewarder.py  local_rewarder.py  map_accumulator.py  map_eval.py  pcl_mesh_metrics.py  pose_array_to_path.py  rewarder.py  rewards_accumulator.py  travelled_dist.py
(+19 files in other folders)
