<?xml version="1.0"?>
<package format="2">
    <name>rpz_planning</name>
    <version>0.0.1</version>
    <description>Gradient-based planning on RPZ subspace.</description>
    <maintainer email="tpetricek@gmail.com">Tomas Petricek</maintainer>
    <license>BSD</license>
    <url type="website">https://github.com/tpet/rpz_planning</url>
    <author email="tpetricek@gmail.com">Tomas Petricek</author>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>tf2_ros</depend>

    <build_depend>message_generation</build_depend>
    <build_export_depend>message_generation</build_export_depend>
    <exec_depend>message_runtime</exec_depend>
</package>
